<resources>
    <string name="app_name">FILPS</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FILPS</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_krs">KRS</string>
    <string name="menu_program">Program</string>
    <string name="menu_jadwal">Jadwal</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_bantuan">Bantuan</string>
</resources>