<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_krs"
            android:icon="@drawable/ic_baseline_add_box_24"
            android:title="@string/menu_krs" />
        <item
            android:id="@+id/nav_program"
            android:icon="@drawable/ic_program"
            android:title="@string/menu_program" />
        <item
            android:id="@+id/nav_jadwal"
            android:icon="@drawable/ic_jadwal"
            android:title="@string/menu_jadwal" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/nav_bantuan"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menu_bantuan" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="Logout" />
    </group>
</menu>