<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.filps.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <activity
        android:id="@+id/nav_krs"
        android:name="com.example.filps.KRSActivity"
        android:label="@string/menu_krs"
        tools:layout="@layout/activity_krs" />

    <fragment
        android:id="@+id/nav_program"
        android:name="com.example.filps.ui.program.ProgramFragment"
        android:label="@string/menu_program"
        tools:layout="@layout/fragment_program" />

    <fragment
        android:id="@+id/nav_jadwal"
        android:name="com.example.filps.ui.jadwal.JadwalFragment"
        android:label="@string/menu_jadwal"
        tools:layout="@layout/fragment_jadwal" />

    <activity
        android:id="@+id/nav_profil"
        android:name="com.example.filps.ProfilActivity"
        android:label="@string/menu_profil"
        tools:layout="@layout/activity_profil" />

    <fragment
        android:id="@+id/nav_bantuan"
        android:name="com.example.filps.ui.bantuan.BantuanFragment"
        android:label="@string/menu_bantuan"
        tools:layout="@layout/fragment_bantuan" />
</navigation>